examples/tests/invalid/bring_invalid_dir.w
bring "./subdir3" as wontWork;
// Cannot bring Wing directories that contain invalid characters: "in.valid"
// Cannot bring Wing directories that contain invalid characters: "not-valid"